// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Component should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx kyfPvg"
    width="75%"
  >
    <img
      alt="Avatar Image"
      src="https://scontent.faep4-1.fna.fbcdn.net/v/t1.0-9/118404240_10157203921491816_5452134641605056529_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=YOJEOCJ3ZqUAX91suA2&_nc_ht=scontent.faep4-1.fna&oh=5a2c7ab5853c092d1964dbb100c43664&oe=6043CDCD"
    />
  </div>
</DocumentFragment>
`;

exports[`Image Component should render correctly with circular prop 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx MxgGA"
    width="75%"
  >
    <img
      alt="Avatar Image"
      src="https://scontent.faep4-1.fna.fbcdn.net/v/t1.0-9/118404240_10157203921491816_5452134641605056529_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=YOJEOCJ3ZqUAX91suA2&_nc_ht=scontent.faep4-1.fna&oh=5a2c7ab5853c092d1964dbb100c43664&oe=6043CDCD"
    />
  </div>
</DocumentFragment>
`;
